--- a/index.html
+++ b/index.html
@@ -3,10 +3,8 @@
 <head>
 <meta charset="utf-8">
 <link rel="stylesheet" href="snake.css">
-<script src="./p5.min.js">
-
-</script>
-
+<script src="./p5.min.js"></script>
+<script src="./hammer.min.js"></script>
 <title>Snake</title>
 </head>
 
